added all classes and tag to syle.css file

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="bannerlink">
               <a href="#">Lorem Ipsum &raquo;</a>
             </div>
-            <div class="bannerlink">
+            <div class="banlink">
               <a href="#">Lorem Ipsum &raquo;</a>
             </div>
           </div>
