bannersection style added

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             libero faucibus diculum odio in venec amet.
           </p>
           <div class="bannerlink clear">
-            <div class="bannerlink">
+            <div class="banlink">
               <a href="#">Lorem Ipsum &raquo;</a>
             </div>
-            <div class="banlink">
+            <div class="banlink" style="margin-right: 0px">
               <a href="#">Lorem Ipsum &raquo;</a>
             </div>
           </div>
