service section style added

--- a/index.html
+++ b/index.html
@@ -57,48 +57,66 @@
         </div>
       </div>
       <div class="servicesection clear">
-        <div class="service clear">
-          <h2>Our Services</h2>
-          <h3>Test Text</h3>
-          <p>
-            Nullamlacus dui ipsum conseqlo bo ttis non euisque morbipen asda
-            pibulum orna.
-          </p>
-          <p>Urnau ltrices quis curabitur pha sellent esque congu magnisve.</p>
-          <a href="#">Read More &raquo; </a>
-        </div>
+        <div class="allservice clear">
+          <div class="service clear">
+            <h2>Our Services</h2>
+            <h3>Test Text</h3>
+            <p>
+              Nullamlacus dui ipsum conseqlo bo ttis non euisque morbipen asda
+              pibulum orna.
+            </p>
+            <p>
+              Urnau ltrices quis curabitur pha sellent esque congu magnisve.
+            </p>
+            <div class="readmore">
+              <a href="#">Read More &raquo; </a>
+            </div>
+          </div>
 
-        <div class="service clear">
-          <h2>Our Services</h2>
-          <h3>Test Text</h3>
-          <p>
-            Nullamlacus dui ipsum conseqlo bo ttis non euisque morbipen asda
-            pibulum orna.
-          </p>
-          <p>Urnau ltrices quis curabitur pha sellent esque congu magnisve.</p>
-          <a href="#">Read More &raquo; </a>
-        </div>
+          <div class="service clear">
+            <h2>Our Services</h2>
+            <h3>Test Text</h3>
+            <p>
+              Nullamlacus dui ipsum conseqlo bo ttis non euisque morbipen asda
+              pibulum orna.
+            </p>
+            <p>
+              Urnau ltrices quis curabitur pha sellent esque congu magnisve.
+            </p>
+            <div class="readmore">
+              <a href="#">Read More &raquo; </a>
+            </div>
+          </div>
 
-        <div class="service clear">
-          <h2>Our Services</h2>
-          <h3>Test Text</h3>
-          <p>
-            Nullamlacus dui ipsum conseqlo bo ttis non euisque morbipen asda
-            pibulum orna.
-          </p>
-          <p>Urnau ltrices quis curabitur pha sellent esque congu magnisve.</p>
-          <a href="#">Read More &raquo; </a>
-        </div>
+          <div class="service clear">
+            <h2>Our Services</h2>
+            <h3>Test Text</h3>
+            <p>
+              Nullamlacus dui ipsum conseqlo bo ttis non euisque morbipen asda
+              pibulum orna.
+            </p>
+            <p>
+              Urnau ltrices quis curabitur pha sellent esque congu magnisve.
+            </p>
+            <div class="readmore">
+              <a href="#">Read More &raquo; </a>
+            </div>
+          </div>
 
-        <div class="service clear">
-          <h2>Our Services</h2>
-          <h3>Test Text</h3>
-          <p>
-            Nullamlacus dui ipsum conseqlo bo ttis non euisque morbipen asda
-            pibulum orna.
-          </p>
-          <p>Urnau ltrices quis curabitur pha sellent esque congu magnisve.</p>
-          <a href="#">Read More &raquo; </a>
+          <div class="service clear">
+            <h2>Our Services</h2>
+            <h3>Test Text</h3>
+            <p>
+              Nullamlacus dui ipsum conseqlo bo ttis non euisque morbipen asda
+              pibulum orna.
+            </p>
+            <p>
+              Urnau ltrices quis curabitur pha sellent esque congu magnisve.
+            </p>
+            <div class="readmore">
+              <a href="#">Read More &raquo; </a>
+            </div>
+          </div>
         </div>
       </div>
       <div class="contentsection clear">
